5. Валидация параметров запуска. [#246865 #233298] Out the validation